# project-orz

./: .gitignore  Cargo.toml  README.md  cargo.toml  rustfmt.toml
.github/workflows/: doc.yml  rust.yml
docs/: intro.md
examples/: basic.orzir  control_flow.orzir  rv.orzir
orzir/: Cargo.toml
orzir-core/: Cargo.toml
orzir-core/src/: core.rs  lib.rs  support.rs
orzir-core/src/core/: attribute.rs  block.rs  builder.rs  context.rs  dialect.rs  interfaces.rs  layout.rs  mnemonic.rs  op.rs  operation.rs  parse.rs  print.rs  region.rs  rewrite.rs  symbol.rs  ty.rs  value.rs  verify.rs  walk.rs
orzir-core/src/support/: apfloat.rs  apint.rs  bimap.rs  cast.rs  either.rs  error.rs  graph.rs  list.rs  placeholder.rs  storage.rs
orzir-macros/: Cargo.toml
orzir-macros/src/: attribute.rs  cast.rs  format.rs  interfaces.rs  lib.rs  op.rs  operation.rs  ty.rs
orzir-macros/src/interfaces/: control_flow.rs  data_flow.rs  region_interface.rs
orzir-macros/tests/: run.rs
orzir-macros/tests/cases/: module.rs
orzir-vscode/: README.md  package.json
orzir-vscode/syntaxes/: orzir.tmLanguage.json
orzir/src/: analyses.rs  analysis.rs  conversion.rs  dialects.rs  interfaces.rs  lib.rs  verifiers.rs
orzir/src/analyses/: control_flow.rs
orzir/src/analysis/: control_flow.rs
orzir/src/dialects/: arith.rs  builtin.rs  cf.rs  func.rs  mem.rs  riscv.rs  std.rs
orzir/src/dialects/riscv/: basic.rs  regs.rs  (+2 more)
orzir/src/verifiers/: control_flow.rs
orzir/tests/: basic.rs  isolated_from_above.rs
syc/: Cargo.toml
syc/src/: ast.rs  lower.rs  main.rs  parser.lalrpop
(+5 files in other folders)
