[package]
name = "orzir-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.0"
thiserror = "1.0.58"
anyhow = "1.0.81"

intertrait = { git = "https://github.com/JuniMay/intertrait.git" }