[package]
name = "orzir-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.53", features = ["full"] }
quote = "1.0.35"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "=1.0.0"
orzir-core = { path = "../orzir-core" }
anyhow = "1.0.81"
